# pkg/pb/api/v1/api_grpc.pb.go
@@ -14,156 +14,120 @@ import (
 // Requires gRPC-Go v1.32.0 or later.
 const _ = grpc.SupportPackageIsVersion7
 
-// PetStoreClient is the client API for PetStore service.
+// TwitterServiceClient is the client API for TwitterService service.
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
-type PetStoreClient interface {
-	GetPet(ctx context.Context, in *GetPetRequest, opts ...grpc.CallOption) (*GetPetResponse, error)
-	PutPet(ctx context.Context, in *PutPetRequest, opts ...grpc.CallOption) (*PutPetResponse, error)
-	DeletePet(ctx context.Context, in *DeletePetRequest, opts ...grpc.CallOption) (*DeletePetResponse, error)
+type TwitterServiceClient interface {
+	CreatePost(ctx context.Context, in *CreatePostRequest, opts ...grpc.CallOption) (*CreatePostResponse, error)
+	GetFeed(ctx context.Context, in *GetFeedRequest, opts ...grpc.CallOption) (*GetFeedResponse, error)
 }
 
-type petStoreClient struct {
+type twitterServiceClient struct {
 	cc grpc.ClientConnInterface
 }
 
-func NewPetStoreClient(cc grpc.ClientConnInterface) PetStoreClient {
-	return &petStoreClient{cc}
+func NewTwitterServiceClient(cc grpc.ClientConnInterface) TwitterServiceClient {
+	return &twitterServiceClient{cc}
 }
 
-func (c *petStoreClient) GetPet(ctx context.Context, in *GetPetRequest, opts ...grpc.CallOption) (*GetPetResponse, error) {
-	out := new(GetPetResponse)
-	err := c.cc.Invoke(ctx, "/pet.v1.PetStore/GetPet", in, out, opts...)
+func (c *twitterServiceClient) CreatePost(ctx context.Context, in *CreatePostRequest, opts ...grpc.CallOption) (*CreatePostResponse, error) {
+	out := new(CreatePostResponse)
+	err := c.cc.Invoke(ctx, "/twitter_service.v1.TwitterService/CreatePost", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
 	return out, nil
 }
 
-func (c *petStoreClient) PutPet(ctx context.Context, in *PutPetRequest, opts ...grpc.CallOption) (*PutPetResponse, error) {
-	out := new(PutPetResponse)
-	err := c.cc.Invoke(ctx, "/pet.v1.PetStore/PutPet", in, out, opts...)
+func (c *twitterServiceClient) GetFeed(ctx context.Context, in *GetFeedRequest, opts ...grpc.CallOption) (*GetFeedResponse, error) {
+	out := new(GetFeedResponse)
+	err := c.cc.Invoke(ctx, "/twitter_service.v1.TwitterService/GetFeed", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
 	return out, nil
 }
 
-func (c *petStoreClient) DeletePet(ctx context.Context, in *DeletePetRequest, opts ...grpc.CallOption) (*DeletePetResponse, error) {
-	out := new(DeletePetResponse)
-	err := c.cc.Invoke(ctx, "/pet.v1.PetStore/DeletePet", in, out, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
-// PetStoreServer is the server API for PetStore service.
-// All implementations should embed UnimplementedPetStoreServer
+// TwitterServiceServer is the server API for TwitterService service.
+// All implementations should embed UnimplementedTwitterServiceServer
 // for forward compatibility
-type PetStoreServer interface {
-	GetPet(context.Context, *GetPetRequest) (*GetPetResponse, error)
-	PutPet(context.Context, *PutPetRequest) (*PutPetResponse, error)
-	DeletePet(context.Context, *DeletePetRequest) (*DeletePetResponse, error)
+type TwitterServiceServer interface {
+	CreatePost(context.Context, *CreatePostRequest) (*CreatePostResponse, error)
+	GetFeed(context.Context, *GetFeedRequest) (*GetFeedResponse, error)
 }
 
-// UnimplementedPetStoreServer should be embedded to have forward compatible implementations.
-type UnimplementedPetStoreServer struct {
+// UnimplementedTwitterServiceServer should be embedded to have forward compatible implementations.
+type UnimplementedTwitterServiceServer struct {
 }
 
-func (UnimplementedPetStoreServer) GetPet(context.Context, *GetPetRequest) (*GetPetResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method GetPet not implemented")
+func (UnimplementedTwitterServiceServer) CreatePost(context.Context, *CreatePostRequest) (*CreatePostResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method CreatePost not implemented")
 }
-func (UnimplementedPetStoreServer) PutPet(context.Context, *PutPetRequest) (*PutPetResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method PutPet not implemented")
-}
-func (UnimplementedPetStoreServer) DeletePet(context.Context, *DeletePetRequest) (*DeletePetResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method DeletePet not implemented")
+func (UnimplementedTwitterServiceServer) GetFeed(context.Context, *GetFeedRequest) (*GetFeedResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetFeed not implemented")
 }
 
-// UnsafePetStoreServer may be embedded to opt out of forward compatibility for this service.
-// Use of this interface is not recommended, as added methods to PetStoreServer will
+// UnsafeTwitterServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to TwitterServiceServer will
 // result in compilation errors.
-type UnsafePetStoreServer interface {
-	mustEmbedUnimplementedPetStoreServer()
+type UnsafeTwitterServiceServer interface {
+	mustEmbedUnimplementedTwitterServiceServer()
 }
 
-func RegisterPetStoreServer(s grpc.ServiceRegistrar, srv PetStoreServer) {
-	s.RegisterService(&PetStore_ServiceDesc, srv)
+func RegisterTwitterServiceServer(s grpc.ServiceRegistrar, srv TwitterServiceServer) {
+	s.RegisterService(&TwitterService_ServiceDesc, srv)
 }
 
-func _PetStore_GetPet_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(GetPetRequest)
+func _TwitterService_CreatePost_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CreatePostRequest)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(PetStoreServer).GetPet(ctx, in)
+		return srv.(TwitterServiceServer).CreatePost(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/pet.v1.PetStore/GetPet",
+		FullMethod: "/twitter_service.v1.TwitterService/CreatePost",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(PetStoreServer).GetPet(ctx, req.(*GetPetRequest))
+		return srv.(TwitterServiceServer).CreatePost(ctx, req.(*CreatePostRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
 
-func _PetStore_PutPet_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(PutPetRequest)
+func _TwitterService_GetFeed_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetFeedRequest)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(PetStoreServer).PutPet(ctx, in)
+		return srv.(TwitterServiceServer).GetFeed(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/pet.v1.PetStore/PutPet",
+		FullMethod: "/twitter_service.v1.TwitterService/GetFeed",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(PetStoreServer).PutPet(ctx, req.(*PutPetRequest))
+		return srv.(TwitterServiceServer).GetFeed(ctx, req.(*GetFeedRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
 
-func _PetStore_DeletePet_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(DeletePetRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(PetStoreServer).DeletePet(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: "/pet.v1.PetStore/DeletePet",
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(PetStoreServer).DeletePet(ctx, req.(*DeletePetRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
-// PetStore_ServiceDesc is the grpc.ServiceDesc for PetStore service.
+// TwitterService_ServiceDesc is the grpc.ServiceDesc for TwitterService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
-var PetStore_ServiceDesc = grpc.ServiceDesc{
-	ServiceName: "pet.v1.PetStore",
-	HandlerType: (*PetStoreServer)(nil),
+var TwitterService_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "twitter_service.v1.TwitterService",
+	HandlerType: (*TwitterServiceServer)(nil),
 	Methods: []grpc.MethodDesc{
 		{
-			MethodName: "GetPet",
-			Handler:    _PetStore_GetPet_Handler,
+			MethodName: "CreatePost",
+			Handler:    _TwitterService_CreatePost_Handler,
 		},
 		{
-			MethodName: "PutPet",
-			Handler:    _PetStore_PutPet_Handler,
-		},
-		{
-			MethodName: "DeletePet",
-			Handler:    _PetStore_DeletePet_Handler,
+			MethodName: "GetFeed",
+			Handler:    _TwitterService_GetFeed_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
